--- a/src/components/UI/TilesBg.module.css
+++ b/src/components/UI/TilesBg.module.css
@@ -1,12 +1,14 @@
 #tiles {
-  height: calc(100vh - 1px);
   width: calc(100vw - 1px);
   position: relative;
-  /* z-index: 2; */
-
+  z-index: 0;
   display: grid;
   grid-template-columns: repeat(var(--columns), 1fr);
   grid-template-rows: repeat(var(--rows), 1fr);
+}
+
+.tilesHeight {
+  height: calc(100vh - 1px);
 }
 
 .tile {
